eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: osintube-service
spec:
  selector:
    app: osintube
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
  type: LoadBalancer
