eks/ingress-osintube.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: osintube-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:248189947068:certificate/5b6793f1-2b59-4bd0-8a09-c11bf6b77314
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/redirect-to-https: "true"
spec:
  ingressClassName: alb
  rules:
  - host: osintube.dataiesb.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: osintube-service
            port:
              number: 80
